xmldoc: Fix for Doxygen.

ASTERISK-29765

Change-Id: I654ba0debe8351038d4433716434a09370f04c9d